tests/endtoend/failure/expected/error_scopebug.compile.out
error_scopebug.silly: In function ‘foo’:
error_scopebug.silly:9:11: error: Undeclared variable x
    9 |     PRINT x;
      |           ^
